--- a/HTML5&CSS3/first.html
+++ b/HTML5&CSS3/first.html
@@ -23,6 +23,6 @@
         </pre>
         <strong>strong 태그는 굵게 표현하는 것입니다.</strong><br>
         <b>b태그도 동일한 기능을 합니다. 바로 위글과 동일하게 작성된 것을 보실 수 있으세요</b>
-        <q cite="https://blog.naver.com/hansol416">또르, p태그에서 이렇게 cite옵션을 통해 인용 가능 합니다.</q>
+        <q cite="https://blog.naver.com/hansol416">또르, q태그에서 이렇게 cite옵션을 통해 인용 가능 합니다.</q>
     </body>
 </html>
