--- a/VanillaJS/index.html
+++ b/VanillaJS/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>This is Working</h1>
-        <script src="index.js"></script></script>
+        <script src="index.js"></script>
     </body>
 </html>
