Step 9. JS DOM Functions

--- a/VanillaJS/index.html
+++ b/VanillaJS/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="index.css" />
     </head>
     <body>
-        <h1>This is Working</h1>
-        <script src="index.js"></script>
+        <h1 id="title">This is Working</h1>
+        <script src="./index.js"></script>
     </body>
 </html>
