--- a/VanillaJS/index.html
+++ b/VanillaJS/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1 id="title">This is Working</h1>
+        <p id="test">
+                
+        </p>
         <script src="./index.js"></script>
     </body>
 </html>
